# Encode-and-decode-text

./: Bao cao lap trinh mang.pptx  Báo cáo lập trình mạng.docx  INSTALL.txt.encrypted.decrypet  Makefile  Makefile.in  README.txt  config.h  config.h.in  config.status  configure  configure.ac  k  testtv.txt  Đăng kí đề tài môn Lập trình mạng.ods
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in
src/client/: Makefile  Makefile.am  Makefile.in  client_dev_b_plant.cpp
src/client/.deps/: client_dev_b_plant.Po
src/compression/: Makefile  Makefile.am  Makefile.in  zpipe.cpp
src/compression/.deps/: zpipe.Po
src/etc_tools/: Makefile  Makefile.am  Makefile.in  install_server.cpp
src/etc_tools/.deps/: install_server.Po
src/lib/: Makefile  Makefile.am  Makefile.in
src/lib/tcp_stream/: Makefile  Makefile.am  Makefile.in  tcp_acceptor.cpp  tcp_acceptor.hpp  tcp_acceptor_accept.cpp  tcp_acceptor_start.cpp  tcp_connector.hpp  tcp_connector_connect.cpp  tcp_connector_resolvehostname.cpp  tcp_stream.cpp  tcp_stream.hpp  tcp_stream_receivedatasegment.cpp  tcp_stream_receivefile.cpp  tcp_stream_senddatasegment.cpp  tcp_stream_sendfile.cpp  tcp_stream_setstream.cpp
src/lib/tcp_stream/.deps/: tcp_acceptor.Po  tcp_acceptor_accept.Po  tcp_acceptor_start.Po  tcp_connector_connect.Po  tcp_connector_resolvehostname.Po  tcp_stream.Po  tcp_stream_receivedatasegment.Po  tcp_stream_receivefile.Po  tcp_stream_senddatasegment.Po  tcp_stream_sendfile.Po
src/lib/zlib/examples/: zpipe.c
src/server/: Makefile  Makefile.am  Makefile.in  server_dev_b_plant.cpp
src/server/.deps/: server_dev_b_plant.Po
